el 90% de las validaciones y modificaciones

--- a/src/app/components/perfil/show/show.component.html
+++ b/src/app/components/perfil/show/show.component.html
@@ -7,9 +7,9 @@
     <div class="perfil_completo">         
         <app-header-admin></app-header-admin>        
          <div class="texto">
-            <h2> Perfil Aministrador</h2>
+            <h2> Perfil Administrador</h2>
             <p>
-               Este módulo te permite visualizar el perfil administrador 
+               Este módulo te permite visualizar el perfil Administrador 
            </p>
            <hr>
         <form [formGroup]="ediForm"  novalidate class="formulario_show_perfil">
