--- a/src/app/components/usuarios/canciones/cancion-por-album/cancion-por-album.component.html
+++ b/src/app/components/usuarios/canciones/cancion-por-album/cancion-por-album.component.html
@@ -14,7 +14,7 @@
         <h2>Todas tus canciones por Álbumes</h2>
       
         <p>
-          En esta sección se visualizan las canciones del Artista de cada álbumes
+          Este módulo te permite visualizar las canciones del artista de cada álbumes
       </p>
       <hr>
       <div class="container">
@@ -36,9 +36,9 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Cancion</th>
+              <th scope="col">Canción</th>
               <th scope="col">Mp3</th>
-              <th scope="col">Eliminar</th>
+              <th scope="col">Gestionar</th>
           
             </tr>
           </thead>
