--- a/src/app/components/usuarios/generos/create-generos/create-generos.component.html
+++ b/src/app/components/usuarios/generos/create-generos/create-generos.component.html
@@ -8,7 +8,7 @@
       <app-header-artist></app-header-artist>
         <div class="crear_generos">
           <div>
-        <h2>Crear Nuevos Género</h2>
+        <h2>Crear nuevos Género</h2>
         <p>
           Este módulo te permite crear nuevos géneros
         </p>
@@ -31,7 +31,7 @@
         <div class="form-group " >
     
     
-          <form class="formulario_generos" (ngSubmit)="crear_generos()" [formGroup]="generosforms">
+          <form class="formulario_generos" (ngSubmit)="crear_generos()" [formGroup]="generosforms"  >
             <div class="form-group">
             
               <img class="imagenes_generos" [src]="imgURL" with="100" height="100">
@@ -43,17 +43,14 @@
             </div>
             <div class="input-group mb-3">
               <label class="label_genero" >Género</label>
-              <input type="text" class="form-control" placeholder="Generos" required formControlName="Genero_nuevo" ngModel pattern="[a-zA-Z-ñ ]*"  [class.red]="genero_nuevo_no_valido" >
+              <input type="text" class="form-control" placeholder="Generos" required formControlName="Genero_nuevo" ngModel pattern="^[a-zA-Z\u00F1\u00D1\u00E0-\u00FC]+$"  [class.red]="genero_nuevo_no_valido" >
               <label class="error"  *ngIf="genero_nuevo_no_valido" >{{getErrorMessage_genero_nuevo()}}</label>   
-              <button  class="btn btn-primary w-100" [disabled]="!generosforms.valid"   type="submit">Crear</button>
+              <button  class="btn btn-primary w-100" [disabled]="!generosforms.valid"    type="submit">Crear</button>
             </div>
         
     
     
-       
-      
-           
-        
+              
         </form>
     
       </div>
