--- a/src/app/components/usuarios/generos/generos.component.html
+++ b/src/app/components/usuarios/generos/generos.component.html
@@ -22,7 +22,7 @@
         data-toggle="modal" data-target="#productosModal"> Crear Géneros</button> </a>
     </div>
     <div class="col1 col-lg-4">
-      <button  routerLink="/dashboard-user" type="submit" class=" regesar btn_generos btn-primary w-100">Regresar</button>
+      <button  routerLink="/show-artist/{{usuario}}" type="submit" class=" regesar btn_generos btn-primary w-100">Regresar</button>
     </div>
   </div>
 </div>
@@ -37,12 +37,12 @@
         <h3>Genero ecuatoriano</h3>
         <h2 class="card-title">{{generos.Genero_nuevo}}</h2>
         
-        <a routerLink="/crear-Albumes/{{generos.id}}"  clic="gen(generos.Genero_nuevo)"class="btn btn-success btn-sm">Crear Álbum</a>
-        <button routerLink="/edit-generos/{{generos.id}}"  class="btn btn-primary btn-sm" >Editar</button>
+        <a routerLink="/crear-Albumes/{{generos.id}}"  clic="gen(generos.Genero_nuevo)"class="btn btn-success w-100">Crear Álbum</a>
+        <button routerLink="/edit-generos/{{generos.id}}"  class="btn btn-primary w-100" >Editar</button>
         
-
-        <button type="button" class="btn btn-danger btn-sm"
-          (click)="eliminar_genero(generos)">Eliminar</button>
+<!--     <button type="button" class="btn btn-danger btn-sm"
+          (click)="eliminar_genero(generos)">Eliminar</button> -->
+   
 
 
 
@@ -56,6 +56,26 @@
 
 
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+     
+      <button class="btn btn-secondary" (click)="atras_pagina_mensaje_solicitud()" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+        <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+      </svg></button>
+    </div>
+    <div class="col-7">
+     
+    </div>
+    <div class="col-2">
+      <button class="btn btn-secondary" (click)="siguiente_pagina_mensaje_solicitud() " [disabled]="(todoslosgeneros | pipeGeneros:page:search).length<=0"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+      </svg></button> 
+
+    </div>
+  </div>
+</div>
+
 </div>
 
 
