--- a/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
+++ b/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
@@ -27,7 +27,7 @@ Este módulo te permite visualizar el perfil Artista
         
       </div>
       <div class="col1 col-lg-2">
-        <button  routerLink="/dashboard-user" type="submit" class="btn btn-primary w-100 ">Regresar</button>
+      <!--<button  routerLink="/dashboard-user" type="submit" class="btn btn-primary w-100 ">Regresar</button> -->  
       </div>
     </div>
   </div>
