--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.html
@@ -5,7 +5,7 @@
 <div class="Visualizacion_artistas_completa_aceptados">
     <app-header-admin></app-header-admin>  
 <div class="formulario_completo_artistas_aceptados">
-    <h2>Solicitudes Rechazados </h2>
+    <h2>Solicitudes Rechazadas </h2>
     <p>Este módulo te permite visualizar las solicitudes rechazadas de los artistas
     </p>
     <hr>
@@ -49,8 +49,13 @@
         </tr>
     </tbody>
 </table>
-<button class="btn btn-secondary" (click)=" atras_pagina_Solicitud_rechazas()" >Anterior</button>
-<button class="btn btn-secondary" (click)="  siguiente_pagina_solicitud_rechazadas() " [disabled]="(Administrador | filtroSolicitudRechazadas:page:search).length<1">Siguiente</button> 
+<button class="btn btn-secondary" (click)=" atras_pagina_Solicitud_rechazas()" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+    <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+  </svg></button>
+<button class="btn btn-secondary" (click)="  siguiente_pagina_solicitud_rechazadas() " [disabled]="(Administrador | filtroSolicitudRechazadas:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+    <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+  </svg></button> 
+  <br>
 </div>
 </div>
 
