--- a/src/app/components/usuarios/Albumes/create-albumes/create-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/create-albumes/create-albumes.component.html
@@ -11,7 +11,7 @@
   
   
   
-      <h2>Crea todos tus Albumes</h2>
+      <h2>Crea todos nuevos Álbumes</h2>
       <p>Este módulo te permite crear álbumes musicales
           <hr>
           <div class="container">
@@ -43,7 +43,7 @@
             <label >Nombre del Álbum</label>
   
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Albumes" required formControlName="name" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="albumes_nuevo_no_valido" >
+            <input type="text" class="form-control" placeholder="Albumes" required formControlName="name" ngModel pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1]+(\s*[a-zA-ZÀ-ÿ\u00f1\u00d1]*)*[a-zA-ZÀ-ÿ\u00f1\u00d1]+$" [class.red]="albumes_nuevo_no_valido" >
           
           </div>
         <label class="error" *ngIf="albumes_nuevo_no_valido"  >{{albumesmio()}}</label> 
@@ -51,14 +51,14 @@
           <label >Autor</label>
           <div class="input-group mb-3">
            
-            <input type="text" class="form-control" placeholder="Autor" required formControlName="author" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="autor_nuevo_no_valido">
+            <input type="text" class="form-control" placeholder="Autor" required formControlName="author" ngModel pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1]+(\s*[a-zA-ZÀ-ÿ\u00f1\u00d1]*)*[a-zA-ZÀ-ÿ\u00f1\u00d1]+$" [class.red]="autor_nuevo_no_valido">
           </div>
           <label class="error" *ngIf="autor_nuevo_no_valido"  >{{autormio()}}</label> 
           <br>
           <label > Año</label>
           <div class="input-group mb-3">
          
-            <input type="text" class="form-control" placeholder="Año" required formControlName="year" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="anio_nuevo_no_valido">
+            <input type="text" maxlength="4" minlength="4" class="form-control" placeholder="Año" required formControlName="year" ngModel pattern="^0[1-9]|[1-9]\d$" [class.red]="anio_nuevo_no_valido">
           </div>
           <label class="error" *ngIf="anio_nuevo_no_valido"  >{{aniomio()}}</label> 
           <button  class="btn btn-primary w-100" [disabled]="!Albumesforms.valid"   type="submit" >Crear</button>
