--- a/src/app/components/usuarios/canciones/edit-canciones/edit-canciones.component.html
+++ b/src/app/components/usuarios/canciones/edit-canciones/edit-canciones.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="formulario_canciones"> 
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Cancion" required formControlName="song_nombre"  ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="cancion_nombre_nuevo_no_valido">
+      <input type="text" class="form-control" placeholder="Cancion" required formControlName="song_nombre"  ngModel pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1]+(\s*[a-zA-ZÀ-ÿ\u00f1\u00d1]*)*[a-zA-ZÀ-ÿ\u00f1\u00d1]+$" [class.red]="cancion_nombre_nuevo_no_valido">
       <label class="error" *ngIf="cancion_nombre_nuevo_no_valido"  >{{cancionmio()}}</label> 
       <br>
       <br>
