--- a/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
+++ b/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
@@ -14,7 +14,7 @@
       <h2>Todas tus canciones </h2>
     
       <p>
-        En esta sección se visualizan las canciones del Artista.
+        Este módulo te permite  visualizar todas las canciones del artista.
     </p>
     <hr>
     <div class="container">
@@ -36,9 +36,9 @@
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">Cancion</th>
+            <th scope="col">Canción</th>
             <th scope="col">Mp3</th>
-            <th scope="col">Eliminar</th>
+            <th scope="col">Gestionar</th>
         
           </tr>
         </thead>
