--- a/src/app/components/usuarios/generos/create-generos/create-generos.component.css
+++ b/src/app/components/usuarios/generos/create-generos/create-generos.component.css
@@ -2,6 +2,7 @@
 
    width: 100%;
    height: 100vh;
+  
 }
 
 .input-group{
@@ -28,6 +29,7 @@
    width: 80%;
    margin-left: 5%;
    
+   
 
 }
 .crear_generos h2{
@@ -37,6 +39,9 @@
 .crear_generos p{
    padding-left: 5%;
    padding-right: 5%;
+  
+   margin-left: 5%;
+   margin-right: 5%;
 }
 
 .formulario_generos{
