--- a/src/app/shared/header-admin/header-admin.component.html
+++ b/src/app/shared/header-admin/header-admin.component.html
@@ -5,10 +5,10 @@
 
       <ul class="nav justify-content-end">      
      
-       
-        <li  class="nav-item" >
-          <a class="nav-link" [routerLink]="['/dashboard']">Inicio</a>
-        </li>
+       <!--  <li  class="nav-item" >
+          <a class="nav-link" [routerLink]="['/administrador']">Inicio</a>
+        </li> -->
+      
         
       </ul>
     </a>
