--- a/src/app/shared/header-artist/header-artist.component.html
+++ b/src/app/shared/header-artist/header-artist.component.html
@@ -7,9 +7,9 @@
       <ul class="nav justify-content-end">      
      
        
-        <li  class="nav-item" >
-          <a class="nav-link" [routerLink]="['/dashboard-user']">Inicio</a>
-        </li>
+       <!--<li  class="nav-item" >
+          <a class="nav-link" [routerLink]="['/']"></a>
+        </li> --> 
         
       </ul>
     </a>
