--- a/src/app/shared/welcome/welcome.component.html
+++ b/src/app/shared/welcome/welcome.component.html
@@ -11,7 +11,7 @@
 
            
             <li  class="nav-item" *ngIf="!isLogged" >
-                <a class="nav-link"  href="#Programador">Programador</a>
+                <a class="nav-link"  href="#Programador">Programadora</a>
               </li>
 
               <li  class="nav-item" *ngIf="!isLogged" >
