--- a/src/app/components/perfil/edit/edit.component.html
+++ b/src/app/components/perfil/edit/edit.component.html
@@ -31,17 +31,17 @@
         
         <div class="mb-3">
             <label class="form-label">Nombre</label>
-            <input formControlName="name" type="text" class="form-control" required value="name"  ngModel pattern="[a-zA-Z-ñ ]*"  [class.red]="nombre_no_valido">
+            <input formControlName="name" type="text" class="form-control" required value="name"  ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$"  [class.red]="nombre_no_valido">
             <label class="error"  *ngIf="nombre_no_valido" >{{getErrorMessage_correo()}}</label>      
         </div>
         <div class="mb-3">
             <label class="form-label">Apellido</label>
-            <input formControlName="apellido" type="text" class="form-control" required  ngModel pattern="[a-zA-Z ]*" [class.red]="apellido_no_valido">  
+            <input formControlName="apellido" type="text" class="form-control" required  ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="apellido_no_valido">  
             <label class="error"  *ngIf="apellido_no_valido" >{{getErrorMessage_apellido()}}</label>       
         </div>
         <div class="mb-3">
-            <label class="form-label">Nickname</label>
-            <input formControlName="nickname" type="text" class="form-control" required  ngModel pattern="[a-zA-Z ]*" [class.red]="alias_no_valido">  
+            <label class="form-label">Alias</label>
+            <input formControlName="nickname" type="text" class="form-control" required  ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="alias_no_valido">  
             <label class="error"  *ngIf="alias_no_valido" >{{getErrorMessage_Alias()}}</label>        
         </div>
        
