--- a/src/app/components/usuarios/solicitud/solicitud.component.html
+++ b/src/app/components/usuarios/solicitud/solicitud.component.html
@@ -40,13 +40,13 @@
     <div class="form_soli">
       <div class="mb-3">
           <label class="form-label">Nombre Artístico</label>
-          <input formControlName="nombre_artistico" type="text" class="form-control" required placeholder="Nombre Artístico" ngModel pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1]+(\s*[a-zA-ZÀ-ÿ\u00f1\u00d1]*)*[a-zA-ZÀ-ÿ\u00f1\u00d1]+$"  [class.red]="nombreArtistico_no_valido">
+          <input formControlName="nombre_artistico" type="text" class="form-control" required placeholder="Nombre Artístico" ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$"  [class.red]="nombreArtistico_no_valido">
           <label class="error"  *ngIf="nombreArtistico_no_valido" >{{getErrorMessage_nombre()}}</label>  
         </div>
       <div class="mb-3">    
           <label class="form-label">Número de Cédula</label>
          
-          <input maxlength="10" minlength="10" formControlName="nacionalidad" type="text" class="form-control" required placeholder="Cédula" ngModel pattern="^0[1-9]|[1-9]\d$" [class.red]="cedula_no_valido">
+          <input maxlength="10" minlength="10" formControlName="nacionalidad" type="text" class="form-control" required placeholder="Cédula" ngModel pattern="^0[0-9]|[0-9]\d$" [class.red]="cedula_no_valido">
           <label class="error"  *ngIf="cedula_no_valido" >{{getErrorMessage_cedula()}}</label>  
         </div>
       <div class="form-group">
@@ -70,13 +70,15 @@
   </form>
   <hr>
   <div class=" contenedor_mensaje_solicitud"  >
-   
+    <div *ngIf="cuantos_existen>0 " ></div>  
   <h4>Mensajes de estado de Solicitud</h4> 
   <p>
     En este módulo te permite visualizar  los mensajes de el estado de tu solicitud
   <hr>
   <input type="text" class="form-control mb-2" placeholder="Buscar por mensaje" #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
-         
+
+
+
           <div *ngFor="let administrador of MensajeSolicitud  | filtro:page:search" class="mensaje" >
            
           <thead >
@@ -98,6 +100,7 @@
   
        
       </div>
+      
      
     </div>
     <button class="btn btn-secondary" (click)="atras_pagina_mensaje_solicitud()" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
