traspaso de base

--- a/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
+++ b/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
@@ -37,6 +37,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Canción</th>
+       
             <th scope="col">Mp3</th>
             <th scope="col">Gestionar</th>
         
@@ -46,9 +47,10 @@
           
           <tr *ngFor="let CancionesSolicitud of   todoslascanciones | filtrarCanciones:page:search  let i= index ">
             <td>{{page+i+1}}</td>
-            <td>{{CancionesSolicitud.song_nombre}}</td>
+            <td>{{CancionesSolicitud.song_name}}</td>
+        
      
-            <td><audio [src]="CancionesSolicitud.imageURL" controls></audio></td>
+            <td><audio [src]="CancionesSolicitud.songURL" controls></audio></td>
             <td><button type="button" class="btn btn-danger"
               (click)="eliminar_cancion(CancionesSolicitud)">Eliminar</button></td>
               <td><button routerLink="/edit-Canciones/{{CancionesSolicitud.id}}" class="btn btn-primary" >Editar</button></td>
@@ -56,6 +58,26 @@
           </tr>
         </tbody>
       </table>
+      <div class="container">
+        <div class="row">
+          <div class="col-1">
+           
+            <button class="btn btn-secondary" (click)="atras_pagina_Solicitud()" > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+              <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+            </svg></button>
+          </div>
+          <div class="col-10">
+           
+          </div>
+          <div class="col-1">
+            <button class="btn btn-secondary" (click)="siguiente_pagina_solicitud() " [disabled]="(todoslascanciones | filtrarCanciones:page:search).length<1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+              <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+            </svg></button> 
+      
+          </div>
+        </div>
+      </div>
+ 
     
   </div>
   </div>
