--- a/src/app/components/usuarios/generos/generos.component.html
+++ b/src/app/components/usuarios/generos/generos.component.html
@@ -32,12 +32,13 @@
       <div class="row">
     <div class="card col-lg-12 col-md-12 col-sm-12 " style="width: 16rem;" *ngFor="let generos of todoslosgeneros | pipeGeneros:page:search let i= index">
       <div class="card-body col-lg-12 col-md-12 col-sm-12   ">
-        <img class="imagenes_generos" [src]="generos.imagenUrl" alt="">
+        <img class="imagenes_generos" [src]="generos.imageURL" alt="">
        
         <h3>Genero ecuatoriano</h3>
-        <h2 class="card-title">{{generos.Genero_nuevo}}</h2>
+        <h2 class="card-title">{{generos.name}}</h2>
+        <h3>{{nomauthor}}</h3>
         
-        <a routerLink="/crear-Albumes/{{generos.id}}"  clic="gen(generos.Genero_nuevo)"class="btn btn-success w-100">Crear Álbum</a>
+        <a routerLink="/crear-Albumes/{{generos.id}}" (click)="obtenerGenero(generos.name)" class="btn btn-success w-100">Crear Álbum</a>
         <button routerLink="/edit-generos/{{generos.id}}"  class="btn btn-primary w-100" >Editar</button>
         
 <!--     <button type="button" class="btn btn-danger btn-sm"
