--- a/src/app/components/usuarios/solicitud/solicitud.component.html
+++ b/src/app/components/usuarios/solicitud/solicitud.component.html
@@ -68,13 +68,14 @@
           
     </div>  
   </form>
-  <hr>
+  
   <div class=" contenedor_mensaje_solicitud"  >
-    <div *ngIf="cuantos_existen>0 " ></div>  
-  <h4>Mensajes de estado de Solicitud</h4> 
+    
+  <h2>Mensajes de estado de Solicitud</h2> 
   <p>
     En este módulo te permite visualizar  los mensajes de el estado de tu solicitud
   <hr>
+  <div *ngIf="mostar==1 else mensaje" >
   <input type="text" class="form-control mb-2" placeholder="Buscar por mensaje" #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
 
 
@@ -102,7 +103,7 @@
       </div>
       
      
-    </div>
+   
     <button class="btn btn-secondary" (click)="atras_pagina_mensaje_solicitud()" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
       <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
     </svg></button>
@@ -111,7 +112,14 @@
     </svg></button> 
    
   </div>
-  
+</div>  
+
+<ng-template #mensaje>
+  <h3 class="">
+     No hay mensajes ...
+      </h3>
+  </ng-template>
+
   </div>
 </div>
 
