--- a/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.html
@@ -33,16 +33,18 @@
         <div class="row">
       <div class="card col-lg-12 col-sm-8 col-md-12" style="width: 16.5rem;" *ngFor="let albumes of todoslosalbumes | filtrarAlbumes:page:search let i= index">
         <div class="card-body col-lg-12 col-sm-12 col-md-12   ">
-          <img class="imagenes_generos" [src]="albumes.imagen" alt="">
+          <img class="imagenes_generos" [src]="albumes.imageURL" alt="">
          
           <h2>{{albumes.name}}</h2><br>
+          <label>Género:{{albumes.genre_name}}</label><br>
           <label>Nombre:{{albumes.name}}</label><br>
           <label > Año:{{albumes.year}}</label><br>
           <label >Autor:{{albumes.author}}</label><br>
+
           
        
           
-          <a routerLink="/crear-canciones/{{albumes.id}}" class="btn btn-success w-98"> Crear Canción</a>
+          <a routerLink="/crear-canciones/{{albumes.id}}" (click)="obtenerdatosAlbumes(albumes.name,albumes.genre_name,albumes.author,albumes.imageURL)" class="btn btn-success w-98"> Crear Canción</a>
           <a routerLink="/Canciones-Albumes/{{albumes.id}}" class="btn btn-secondary w-98"> Ver Canciones</a>
           <button routerLink="/edit-Albumes/{{albumes.id}}" class="gg btn btn-primary  " >Editar</button>
          
