--- a/src/app/components/usuarios/Albumes/create-albumes/create-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/create-albumes/create-albumes.component.html
@@ -43,7 +43,7 @@
             <label >Nombre del Álbum</label>
   
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Albumes" required formControlName="name" ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="albumes_nuevo_no_valido" >
+            <input type="text" maxlength="25" minlength="3" class="form-control" placeholder="Albumes" required formControlName="name" ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="albumes_nuevo_no_valido" >
           
           </div>
         <label class="error" *ngIf="albumes_nuevo_no_valido"  >{{albumesmio()}}</label> 
@@ -51,7 +51,7 @@
           <label >Autor</label>
           <div class="input-group mb-3">
            
-            <input type="text" class="form-control" placeholder="Autor" required formControlName="author" ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="autor_nuevo_no_valido">
+            <input type="text" maxlength="25"  minlength="3" class="form-control" placeholder="Autor" required formControlName="author" ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="autor_nuevo_no_valido">
           </div>
           <label class="error" *ngIf="autor_nuevo_no_valido"  >{{autormio()}}</label> 
           <br>
