--- a/src/app/components/usuarios/canciones/edit-canciones/edit-canciones.component.html
+++ b/src/app/components/usuarios/canciones/edit-canciones/edit-canciones.component.html
@@ -43,7 +43,7 @@
     </div>
     <div class="formulario_canciones"> 
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Cancion" required formControlName="song_name"  ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="cancion_nombre_nuevo_no_valido">
+      <input type="text"  maxlength="25" minlength="3" class="form-control" placeholder="Cancion" required formControlName="song_name"  ngModel pattern="^[a-zA-Z\s\u00F1\u00D1\u00E0-\u00FC]+$" [class.red]="cancion_nombre_nuevo_no_valido">
       <label class="error" *ngIf="cancion_nombre_nuevo_no_valido"  >{{cancionmio()}}</label> 
       <br>
       <br>
